# test-resources

./: .gitignore  README.md  notes.txt  pyproject.toml
data-set/ibank/helpdesk/: data.md  letters_en_3000.txt  letters_numbers_symbols_3000.txt  letters_ru_250.txt  letters_ru_3000.txt  symbols_250.txt
data-set/ibank/helpdesk/attachments/: test_file_50Kb.txt
data-set/ibank/helpdesk/texts/: letters_en_250.txt  letters_en_numbers_140.txt  letters_en_numbers_141.txt  letters_en_numbers_40.txt  letters_en_numbers_41.txt  letters_en_numbers_symbols_100.txt  letters_en_numbers_symbols_101.txt  letters_numbers_symbols_250.txt  letters_numbers_symbols_251.txt  letters_numbers_symbols_3001.txt  numbers_14.txt  numbers_15.txt  numbers_250.txt  numbers_3000.txt  symbols_3000.txt
mock/: mock-inbox.json  mock-outbox.json
postman-collections/: dev.postman_environment.json  ibank.postman_collection.json
test-scripts/: README.md
test-scripts/ibank/: settings.py  settings_admin.py
test-scripts/ibank/client/: auth_client.py  ibank_auth_client.py  ibank_client.py
test-scripts/ibank/helpdesk/: create_admin_messages.py  create_message1.py  create_user_messages.py  links.md
test-scripts/ibank/test/helpdesk/: create_admin_messages.py  create_multiple_user_messages.py  create_user_message.py  helpdesk_test.py
